--- a/src/components/Home/Logo/logo.scss
+++ b/src/components/Home/Logo/logo.scss
@@ -26,9 +26,10 @@
     width: 100%;
     opacity: 0;
     transform: rotateZ(30deg);
+    z-index: 1;
   }
 }
 .svg-container {
   stroke: #ffd700;
-  stroke-width: 10px;
+  stroke-width: 1px;
 }
